--- a/css/common.css
+++ b/css/common.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,500;1,700;1,900&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,600&display=swap');
 *{
-  margin: auto;
+  margin: 0;
 	padding: 0;
 	font-family: 'Inter', sans-serif;
 	font-family: 'Montserrat', sans-serif;
@@ -114,57 +114,30 @@ h5 {
 	color: #fff;
 	text-decoration: none;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width:991px) {
-	.footer-main-box{
-		margin-bottom: 25px;
-	}
-	.headers .item-navs ul li.item-nav{
-		display: none;
-	}
-	.headers .item-navs .btn-menu{
-		display: none;
-	}
-	.headers .item-navs i{
-		font-size: 35px;
-		color: #fff;
-	}
+.item-nav a{
+	color: #ffff;
+}
+.item-nav a:hover{
+	text-decoration: none;
+	color: #fff !important;
 }
 
-@media (max-width:600px) {
-	.footer-main-box{
-		margin-bottom: 30px;
-	}
-	.logo-nav {
-    width: 140px;
-	}
-	.headers .item-navs i {
-    font-size: 28px;
-	}
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
