--- a/css/pathiri.css
+++ b/css/pathiri.css
@@ -306,6 +306,7 @@
 	left: 50%;
 	transform: translate(-50%, -50%);
 	display: none;
+	z-index: 10;
 }
 .selected {
 	border: 2px solid #c6a87d;
@@ -335,7 +336,42 @@
 	padding-left: 15px;
 	text-decoration: line-through #fff;
 }
+.location-btn{
+	font-size: 17px;
+	cursor: pointer;
+	margin: 0px 10px;
+	border-radius: 5px !important;
+	padding: 10px 15px !important;
+}
+.location-btn i{
+	margin-right: 6px;
+}
+.overlay {
+	background: rgba(15, 15, 15, 0.621); 
+}
+.overlay_2 {
+	inset: 0;
+}
 
+
+
+
+
+.overlays {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.24); /* Semi-transparent black background */
+  color: white;
+  font-size: 24px;
+  text-align: center;
+  pointer-events: none; /* Allow interaction with the image underneath */
+}
 
 
 
